[FIX] 글 수정 / 삭제 부분 box gap 추가

--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -273,6 +273,7 @@ input, select {
   -ms-flex-direction: row;
   flex-direction: row;
   position: relative;
+  gap: 5px;
 }
 
 .content-wrap .content-frame .writer-wrap p {
